# docs/swagger.yaml
@@ -1,6 +1,3 @@
-basePath: /api/v1
-consumes:
-- application/json
 definitions:
   account_handler.changePasswordReq:
     properties:
@@ -196,9 +193,6 @@ definitions:
     type: object
 info:
   contact: {}
-  description: no description
-  title: Dapso API Documentation
-  version: "1.0"
 paths:
   /account:
     get:
@@ -293,8 +287,6 @@ paths:
       - Account
   /project:
     post:
-      consumes:
-      - application/json
       description: Add a new project for a customer
       parameters:
       - description: Project data
@@ -303,27 +295,11 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/project_handler.addProjectReq'
-      produces:
-      - application/json
       responses:
         "200":
           description: OK
           schema:
             $ref: '#/definitions/project.Project'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/helper.ResponseError'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/helper.ResponseError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/helper.ResponseError'
-      security:
-      - BearerAuth: []
       summary: Add new project
       tags:
       - projects
@@ -519,6 +495,4 @@ paths:
       summary: Get my projects
       tags:
       - projects
-produces:
-- application/json
 swagger: "2.0"
