# internal/transport/http/handlers/project/handler.go
@@ -32,16 +32,8 @@ func (h *handler) Register(g *echo.Group, m helper.Middleware) {
 	private.DELETE("/:ID", h.remove)
 }
 
-// findBySlug godoc
-// @Summary      Get project by slug
-// @Description  Get project information by slug
-// @Tags         projects
-// @Accept       json
-// @Produce      json
+// @Tags         Projects
 // @Param        slug  path      string  true  "Project slug"
-// @Success      200   {object}  project.Project
-// @Failure      404   {object}  helper.ResponseError
-// @Failure      500   {object}  helper.ResponseError
 // @Router       /project/{slug} [get]
 func (h *handler) findBySlug(c echo.Context) error {
 	project, err := h.project.FindOneBySlug(c.Request().Context(), c.Param("slug"))
@@ -53,18 +45,9 @@ func (h *handler) findBySlug(c echo.Context) error {
 	return c.JSON(200, project)
 }
 
-// add godoc
-// @Summary      Add new project
-// @Description  Add a new project for a customer
-// @Tags         projects
-// @Accept       json
-// @Produce      json
+// @Tags         Projects
 // @Param        request  body      addProjectReq  true  "Project data"
 // @Success      200      {object}  project.Project
-// @Failure      400      {object}  helper.ResponseError
-// @Failure      401      {object}  helper.ResponseError
-// @Failure      500      {object}  helper.ResponseError
-// @Security     BearerAuth
 // @Router       /project [post]
 func (h *handler) add(c echo.Context) error {
 	var dto addProjectReq
@@ -86,16 +69,8 @@ func (h *handler) add(c echo.Context) error {
 	return c.JSON(200, output)
 }
 
-// findMy godoc
-// @Summary      Get my projects
-// @Description  Get all projects owned by authenticated user
-// @Tags         projects
-// @Accept       json
-// @Produce      json
+// @Tags         Projects
 // @Success      200  {array}   project.Project
-// @Failure      401  {object}  helper.ResponseError
-// @Failure      500  {object}  helper.ResponseError
-// @Security     BearerAuth
 // @Router       /project/my [get]
 func (h *handler) findMy(c echo.Context) error {
 	projects, err := h.project.FindByOwner(c.Request().Context())
@@ -106,19 +81,11 @@ func (h *handler) findMy(c echo.Context) error {
 	return c.JSON(200, projects)
 }
 
-// remove godoc
 // @Summary      Delete project
 // @Description  Delete project by ID
 // @Tags         projects
-// @Accept       json
-// @Produce      json
 // @Param        ID   path      string  true  "Project ID" format(uuid)
 // @Success      200  {object}  helper.StatusResponse
-// @Failure      400  {object}  helper.ResponseError
-// @Failure      401  {object}  helper.ResponseError
-// @Failure      404  {object}  helper.ResponseError
-// @Failure      500  {object}  helper.ResponseError
-// @Security     BearerAuth
 // @Router       /project/{ID} [delete]
 func (h *handler) remove(c echo.Context) error {
 	projectID, err := uuid.Parse(c.Param("ID"))
